--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- CSS
     ================================================== -->
-    <meta property="og:url"                content="http://theappsgarden.com/" />
+    <meta property="og:url"                content="https://theappsgarden.com/" />
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="The Apps Garden" />
     <meta property="og:description"        content="You've got ideas. We put the tech." />
