--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <h3>Páginas Web</h3>
           <ul>
             <li>HTML5, CSS3 y Javascript</li>
-            <li>Ruby on Rails</li>
+            <li>Python Django/Flask</li>
             <li>Wordpress</li>
           </ul>
         </div>
@@ -99,7 +99,7 @@
           <ul>
             <li>IoT</li>
             <li>Soluciones de Software</li>
-            <li>Consultoría</li>
+            <li>Consultoría de Datos</li>
           </ul>
         </div>
       </div>
