--- a/en/index.html
+++ b/en/index.html
@@ -17,7 +17,7 @@
 
     <!-- CSS
     ================================================== -->
-    <meta property="og:url"                content="http://theappsgarden.com/" />
+    <meta property="og:url"                content="https://theappsgarden.com/" />
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="The Apps Garden" />
     <meta property="og:description"        content="You've got ideas. We put the tech." />
@@ -89,7 +89,7 @@
           <h3>Websites</h3>
           <ul>
             <li>HTML5, CSS3 &amp; Javascript</li>
-            <li>Ruby on Rails</li>
+            <li>Python Django/Flask</li>
             <li>Wordpress</li>
           </ul>
         </div>
@@ -99,7 +99,7 @@
           <ul>
             <li>IoT</li>
             <li>Software Solutions</li>
-            <li>Consulting</li>
+            <li>Data Consulting</li>
           </ul>
         </div>
       </div>
