--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <h3>Adrià Martín</h3>
           <ul>
             <li>Desarrollo de Aplicaciones</li>
-            <li>UX/UI</li>
+            <li>Diseño</li>
           </ul>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4">
@@ -173,7 +173,7 @@
           <h3>Damián Martínez</h3>
           <ul>
             <li>Desarrollo Web</li>
-            <li>Diseño</li>
+            <li>Datos</li>
           </ul>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4">
