--- a/en/index.html
+++ b/en/index.html
@@ -165,7 +165,7 @@
           <h3>Adrià Martín</h3>
           <ul>
             <li>App Development</li>
-            <li>UX/UI</li>
+            <li>Design</li>
           </ul>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4">
@@ -173,7 +173,7 @@
           <h3>Damian Martínez</h3>
           <ul>
             <li>Web Development</li>
-            <li>Design</li>
+            <li>Data</li>
           </ul>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4">
