--- a/ca/index.html
+++ b/ca/index.html
@@ -165,7 +165,7 @@
           <h3>Adrià Martín</h3>
           <ul>
             <li>Desenvolupament d’Aplicacions</li>
-            <li>UX/UI</li>
+            <li>Disseny</li>
           </ul>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4">
@@ -173,7 +173,7 @@
           <h3>Damián Martínez</h3>
           <ul>
             <li>Desenvolupament Web</li>
-            <li>Disseny</li>
+            <li>Dades</li>
           </ul>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4">
