--- a/es/index.html
+++ b/es/index.html
@@ -192,7 +192,7 @@
     <div class="container">
     <div class="row">
         <div class="col-xs-12 col-md-4">
-          <p>Pl. Sant Bernat N11 4-3<br>08650 Sallent, Barcelona, España<br>TLF: +34 666 660 636<br><a href="mailto:team@theappsgarden.com?Subject=Hello%20TheAppsGarden" class="email-contact">team@theappsgarden.com</a></p>
+          <p><a href="mailto:team@theappsgarden.com?Subject=Hello%20TheAppsGarden" class="email-contact">team@theappsgarden.com</a></p>
         </div>
         <div class="col-xs-12 col-md-4 text-center">
           <a href="http://www.facebook.com/theappsgarden" target="_blank"><i class="fa fa-facebook"></i></a>
